[project]
name = "tibaaq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "groq>=0.30.0",
    "instagrapi==1.19.6",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "yt-dlp>=2025.6.30",
]
